--- a/src/main/resources/assets/template-mod/lang/en_cn.json
+++ b/src/main/resources/assets/template-mod/lang/en_cn.json
@@ -11,5 +11,6 @@
   "item.template-mod.silver_axe": "银斧",
   "item.template-mod.silver_hoe": "银锄",
   "item.template-mod.silver_spear": "银矛",
+  "item.template-mod.apple_silver": "银苹果",
   "itemgroup.silver": "银"
 }
