同步到2023年10月04号专栏更新内容。

--- a/src/main/resources/assets/template-mod/lang/en_cn.json
+++ b/src/main/resources/assets/template-mod/lang/en_cn.json
@@ -17,6 +17,7 @@
   "item.template-mod.silver_leggings": "银裤子",
   "item.template-mod.silver_boots": "银鞋子",
   "item.template-mod.coal_ball": "煤球",
+  "trim_material.template-mod.silver": "银质",
   "itemgroup.silver": "银",
   "itemgroup.modother": "其它附加物"
 }
