--- a/src/main/resources/assets/template-mod/lang/en_us.json
+++ b/src/main/resources/assets/template-mod/lang/en_us.json
@@ -5,6 +5,7 @@
   "block.template-mod.silver_ore_block": "银矿",
   "block.template-mod.raw_silver_block": "粗银块",
   "block.template-mod.deepslate_silver_ore": "深层银矿",
+  "block.template-mod.petroleum": "石油",
   "item.template-mod.silver_sword": "银剑",
   "item.template-mod.silver_shovel": "银铲",
   "item.template-mod.silver_pickaxe": "银镐",
@@ -17,6 +18,7 @@
   "item.template-mod.silver_leggings": "银裤子",
   "item.template-mod.silver_boots": "银鞋子",
   "item.template-mod.coal_ball": "煤球",
+  "item.template-mod.bucket_petroleum": "石油桶",
   "trim_material.template-mod.silver": "银质",
   "enchantment.template-mod.poisoning": "淬毒",
   "itemgroup.silver": "银",
