同步到2024年01月23号到01月25号专栏更新内容。

--- a/src/main/resources/assets/template-mod/lang/en_cn.json
+++ b/src/main/resources/assets/template-mod/lang/en_cn.json
@@ -1,11 +1,11 @@
 {
-  "item.template-mod.silver_ingot": "银锭",
-  "item.template-mod.raw_silver": "粗银",
   "block.template-mod.silver_block": "银块",
   "block.template-mod.silver_ore_block": "银矿",
   "block.template-mod.raw_silver_block": "粗银块",
   "block.template-mod.deepslate_silver_ore": "深层银矿",
   "block.template-mod.petroleum": "石油",
+  "item.template-mod.silver_ingot": "银锭",
+  "item.template-mod.raw_silver": "粗银",
   "item.template-mod.silver_sword": "银剑",
   "item.template-mod.silver_shovel": "银铲",
   "item.template-mod.silver_pickaxe": "银镐",
@@ -19,8 +19,17 @@
   "item.template-mod.silver_boots": "银鞋子",
   "item.template-mod.coal_ball": "煤球",
   "item.template-mod.bucket_petroleum": "石油桶",
+  "item.template-mod.blue_slimeball": "蓝色史莱姆球",
+  "item.template-mod.red_slimeball": "红色史莱姆球",
+  "item.template-mod.yellow_slimeball": "黄色史莱姆球",
+  "item.template-mod.egg_blue_slime": "蓝色史莱姆刷怪蛋",
+  "item.template-mod.egg_red_slime": "红色史莱姆刷怪蛋",
+  "item.template-mod.egg_yellow_slime": "黄色史莱姆刷怪蛋",
   "trim_material.template-mod.silver": "银质",
   "enchantment.template-mod.poisoning": "淬毒",
+  "entity.template-mod.blue_slime": "蓝色史莱姆",
+  "entity.template-mod.red_slime": "红色史莱姆",
+  "entity.template-mod.yellow_slime": "黄色史莱姆",
   "itemgroup.silver": "银",
   "itemgroup.modother": "其它附加物"
 }
