同步到2024年01月27号专栏更新内容。

--- a/src/main/resources/assets/template-mod/lang/en_us.json
+++ b/src/main/resources/assets/template-mod/lang/en_us.json
@@ -25,6 +25,10 @@
   "item.template-mod.egg_blue_slime": "蓝色史莱姆刷怪蛋",
   "item.template-mod.egg_red_slime": "红色史莱姆刷怪蛋",
   "item.template-mod.egg_yellow_slime": "黄色史莱姆刷怪蛋",
+  "item.template-mod.silver_sword.tip": "对吸血鬼很管用！",
+  "item.template-mod.silver_ingot.tip": "银闪闪，看起来很值钱！",
+  "item.template-mod.apple_silver.tip": "别吃，银是有毒的！",
+  "item.template-mod.null.tip": "按CTRL显示更多",
   "trim_material.template-mod.silver": "银质",
   "enchantment.template-mod.poisoning": "淬毒",
   "entity.template-mod.blue_slime": "蓝色史莱姆",
