--- a/src/main/resources/assets/template-mod/lang/zh_cn.json
+++ b/src/main/resources/assets/template-mod/lang/zh_cn.json
@@ -25,6 +25,8 @@
   "item.template-mod.egg_blue_slime": "蓝色史莱姆刷怪蛋",
   "item.template-mod.egg_red_slime": "红色史莱姆刷怪蛋",
   "item.template-mod.egg_yellow_slime": "黄色史莱姆刷怪蛋",
+  "item.template-mod.cabbage": "卷心菜",
+  "item.template-mod.cabbage_seeds": "卷心菜种子",
   "item.template-mod.silver_sword.tip": "对吸血鬼很管用！",
   "item.template-mod.silver_ingot.tip": "银闪闪，看起来很值钱！",
   "item.template-mod.apple_silver.tip": "别吃，银是有毒的！",
